--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   fluttericon: ^2.0.0
   flutter_staggered_grid_view: ^0.3.4
   audio_wave: ^0.0.3
+  cool_dropdown: ^1.4.1
+  intl: ^0.17.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
